# codegraph-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh
.github/workflows/: release.yml
benches/: indexing_bench.rs
npm/: README.md  install.js  package.json
queries/: bash.scm  c.scm  clojure.scm  cpp.scm  csharp.scm  dart.scm  elixir.scm  elm.scm  erlang.scm  fortran.scm  go.scm  groovy.scm  haskell.scm  java.scm  javascript.scm  julia.scm  kotlin.scm  lua.scm  nix.scm  php.scm  powershell.scm  python.scm  r.scm  ruby.scm  rust.scm  scala.scm  swift.scm  typescript.scm  verilog.scm  zig.scm
rules/: crypto.yaml  cwe-top25.yaml  owasp-top10.yaml  secrets.yaml
scripts/: gh-action-entrypoint.sh  release.sh
src/: error.rs  lib.rs  main.rs  types.rs
src/cli/: installer.rs
src/config/: loader.rs  mod.rs  preset.rs  schema.rs
src/context/: assembler.rs  budget.rs  mod.rs
src/db/: converters.rs  mod.rs  schema.rs
src/eval/: harness.rs  token_benchmark.rs
src/git/: analysis.rs  blame.rs  history.rs  mod.rs
src/graph/: mod.rs  ranking.rs  search.rs  store.rs  traversal.rs
src/hooks/: claude_template.rs  git_hooks.rs  handlers.rs  install.rs  mod.rs
src/indexer/: embedder.rs  extractor.rs  mod.rs  parser.rs  pipeline.rs
src/mcp/: mod.rs  server.rs
src/observability/: mod.rs
src/resolution/: dead_code.rs  frameworks.rs  imports.rs  mod.rs  routes.rs
src/security/: mod.rs  rules.rs  scanner.rs  taint.rs
tests/: evaluation_test.rs
