[package]
name = "codegraph-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Suat Kocar"]
description = "Codebase intelligence MCP server — semantic code graph with vector search"
license = "MIT"
repository = "https://github.com/suatkocar/codegraph-rs"
keywords = ["mcp", "claude", "code-intelligence", "tree-sitter", "semantic-search"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "codegraph-mcp"
path = "src/main.rs"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Tree-sitter (native — no WASM)
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-ng = "1"
tree-sitter-swift = "0.7"

# Embeddings (feature-gated)
fastembed = { version = "4", optional = true }

# MCP Server
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-std", "signal"] }
schemars = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# File watching
notify = "8"
notify-debouncer-full = "0.5"

# Parallelism
rayon = "1"

# Utilities
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
ignore = "0.4"
streaming-iterator = "0.1.9"

[features]
default = ["embedding"]
embedding = ["dep:fastembed"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3"
